[gd_scene load_steps=33 format=2]

[ext_resource path="res://assets/regions/wretched_wasteland.png" type="Texture" id=1]
[ext_resource path="res://assets/regions/perilous_peaks.png" type="Texture" id=2]
[ext_resource path="res://assets/regions/gory_graveyard.png" type="Texture" id=3]
[ext_resource path="res://assets/regions/fatal_forest.png" type="Texture" id=4]
[ext_resource path="res://assets/regions/verdant_valley.png" type="Texture" id=5]
[ext_resource path="res://assets/regions/vicious_void.png" type="Texture" id=6]
[ext_resource path="res://assets/regions/satanic_swamp.png" type="Texture" id=7]
[ext_resource path="res://assets/regions/gruesome_grove.png" type="Texture" id=8]
[ext_resource path="res://assets/regions/dangerous_depths.png" type="Texture" id=9]
[ext_resource path="res://assets/regions/menacing_mountain.png" type="Texture" id=10]
[ext_resource path="res://ui/separator.tscn" type="PackedScene" id=11]
[ext_resource path="res://scripts/screens/map/screen_map.gd" type="Script" id=12]
[ext_resource path="res://scripts/ui/scrollbar.gd" type="Script" id=13]
[ext_resource path="res://themes/buttons/button_region.tres" type="Theme" id=14]
[ext_resource path="res://themes/scrollbar.tres" type="Theme" id=15]
[ext_resource path="res://assets/icons/health.png" type="Texture" id=16]
[ext_resource path="res://assets/icons/food_cost.png" type="Texture" id=17]
[ext_resource path="res://themes/fonts/font_normal.tres" type="Theme" id=18]
[ext_resource path="res://themes/fonts/font_title.tres" type="Theme" id=19]
[ext_resource path="res://themes/popup.tres" type="StyleBox" id=20]
[ext_resource path="res://themes/buttons/button.tres" type="Theme" id=21]
[ext_resource path="res://assets/icons/travel_time.png" type="Texture" id=22]
[ext_resource path="res://themes/buttons/button_standalone.tres" type="Theme" id=23]
[ext_resource path="res://scripts/popups/popup_monster_attack.gd" type="Script" id=24]
[ext_resource path="res://assets/icons/back_button.png" type="Texture" id=25]
[ext_resource path="res://assets/icons/xp.png" type="Texture" id=26]
[ext_resource path="res://assets/icons/heroes_screen/stats.png" type="Texture" id=27]
[ext_resource path="res://assets/icons/loot.png" type="Texture" id=28]
[ext_resource path="res://assets/icons/fight.png" type="Texture" id=29]
[ext_resource path="res://ui/v_separator.tscn" type="PackedScene" id=30]
[ext_resource path="res://scenes/stat_module.tscn" type="PackedScene" id=31]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.717647, 0.686275, 0.588235, 1 )

[node name="screen_map" type="MarginContainer"]
margin_right = 360.0
margin_bottom = 512.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_top = 6
custom_constants/margin_bottom = 6
script = ExtResource( 12 )

[node name="monster_vbox" type="VBoxContainer" parent="."]
visible = false
margin_top = 6.0
margin_right = 360.0
margin_bottom = 506.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 6

[node name="header" type="Label" parent="monster_vbox"]
margin_right = 360.0
margin_bottom = 21.0
theme = ExtResource( 19 )
custom_colors/font_color = Color( 0.937255, 0.980392, 0.352941, 1 )
align = 1

[node name="sep4" parent="monster_vbox" instance=ExtResource( 11 )]
margin_top = 27.0
margin_bottom = 31.0
custom_styles/panel = SubResource( 1 )

[node name="monsters" type="ScrollContainer" parent="monster_vbox"]
margin_top = 37.0
margin_right = 360.0
margin_bottom = 383.0
mouse_filter = 1
size_flags_vertical = 3
theme = ExtResource( 15 )
scroll_horizontal_enabled = false
script = ExtResource( 13 )

[node name="vbox" type="VBoxContainer" parent="monster_vbox/monsters"]
margin_right = 360.0
margin_bottom = 346.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 6

[node name="sep3" parent="monster_vbox" instance=ExtResource( 11 )]
margin_top = 389.0
margin_bottom = 393.0
custom_styles/panel = SubResource( 1 )

[node name="hbox" type="HBoxContainer" parent="monster_vbox"]
margin_top = 399.0
margin_right = 360.0
margin_bottom = 500.0

[node name="header" type="Label" parent="monster_vbox/hbox"]
margin_top = 40.0
margin_bottom = 61.0
theme = ExtResource( 19 )
custom_colors/font_color = Color( 0.937255, 0.980392, 0.352941, 1 )
align = 1

[node name="reselect_hero" type="Button" parent="monster_vbox/hbox"]
margin_left = 4.0
margin_right = 42.0
margin_bottom = 101.0
size_flags_horizontal = 4
theme = ExtResource( 21 )
icon = ExtResource( 25 )

[node name="region_vbox" type="VBoxContainer" parent="monster_vbox/hbox"]
margin_left = 46.0
margin_right = 360.0
margin_bottom = 101.0
size_flags_horizontal = 3
custom_constants/separation = 5
alignment = 1

[node name="region_row1" type="HBoxContainer" parent="monster_vbox/hbox/region_vbox"]
margin_right = 314.0
margin_bottom = 48.0
custom_constants/separation = 10
alignment = 1

[node name="verdant_valley" type="Button" parent="monster_vbox/hbox/region_vbox/region_row1"]
margin_left = 17.0
margin_right = 65.0
margin_bottom = 48.0
rect_min_size = Vector2( 48, 48 )
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource( 14 )
icon = ExtResource( 5 )
expand_icon = true

[node name="fatal_forest" type="Button" parent="monster_vbox/hbox/region_vbox/region_row1"]
margin_left = 75.0
margin_right = 123.0
margin_bottom = 48.0
rect_min_size = Vector2( 48, 48 )
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource( 14 )
icon = ExtResource( 4 )
expand_icon = true

[node name="gruesome_grove" type="Button" parent="monster_vbox/hbox/region_vbox/region_row1"]
margin_left = 133.0
margin_right = 181.0
margin_bottom = 48.0
rect_min_size = Vector2( 48, 48 )
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource( 14 )
icon = ExtResource( 8 )
expand_icon = true

[node name="dangerous_depths" type="Button" parent="monster_vbox/hbox/region_vbox/region_row1"]
margin_left = 191.0
margin_right = 239.0
margin_bottom = 48.0
rect_min_size = Vector2( 48, 48 )
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource( 14 )
icon = ExtResource( 9 )
expand_icon = true

[node name="wretched_wasteland" type="Button" parent="monster_vbox/hbox/region_vbox/region_row1"]
margin_left = 249.0
margin_right = 297.0
margin_bottom = 48.0
rect_min_size = Vector2( 48, 48 )
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource( 14 )
icon = ExtResource( 1 )
expand_icon = true

[node name="region_row2" type="HBoxContainer" parent="monster_vbox/hbox/region_vbox"]
margin_top = 53.0
margin_right = 314.0
margin_bottom = 101.0
custom_constants/separation = 10
alignment = 1

[node name="gory_graveyard" type="Button" parent="monster_vbox/hbox/region_vbox/region_row2"]
margin_left = 17.0
margin_right = 65.0
margin_bottom = 48.0
rect_min_size = Vector2( 48, 48 )
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource( 14 )
icon = ExtResource( 3 )
expand_icon = true

[node name="satanic_swamp" type="Button" parent="monster_vbox/hbox/region_vbox/region_row2"]
margin_left = 75.0
margin_right = 123.0
margin_bottom = 48.0
rect_min_size = Vector2( 48, 48 )
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource( 14 )
icon = ExtResource( 7 )
expand_icon = true

[node name="perilous_peaks" type="Button" parent="monster_vbox/hbox/region_vbox/region_row2"]
margin_left = 133.0
margin_right = 181.0
margin_bottom = 48.0
rect_min_size = Vector2( 48, 48 )
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource( 14 )
icon = ExtResource( 2 )
expand_icon = true

[node name="menacing_mountain" type="Button" parent="monster_vbox/hbox/region_vbox/region_row2"]
margin_left = 191.0
margin_right = 239.0
margin_bottom = 48.0
rect_min_size = Vector2( 48, 48 )
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource( 14 )
icon = ExtResource( 10 )
expand_icon = true

[node name="vicious_void" type="Button" parent="monster_vbox/hbox/region_vbox/region_row2"]
margin_left = 249.0
margin_right = 297.0
margin_bottom = 48.0
rect_min_size = Vector2( 48, 48 )
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource( 14 )
icon = ExtResource( 6 )
expand_icon = true

[node name="hero_vbox" type="VBoxContainer" parent="."]
margin_top = 6.0
margin_right = 360.0
margin_bottom = 506.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 6

[node name="header" type="Label" parent="hero_vbox"]
margin_right = 360.0
margin_bottom = 21.0
theme = ExtResource( 19 )
custom_colors/font_color = Color( 0.937255, 0.980392, 0.352941, 1 )
text = "Available Heroes"
align = 1

[node name="sep" parent="hero_vbox" instance=ExtResource( 11 )]
margin_top = 27.0
margin_bottom = 31.0
custom_styles/panel = SubResource( 1 )

[node name="no_heroes_msg" type="Label" parent="hero_vbox"]
visible = false
margin_top = 37.0
margin_right = 360.0
margin_bottom = 154.0
theme = ExtResource( 19 )
text = "You must hire a hero in order to send them on missions. 

Head to the \"Hero\" screen to recruit one."
align = 1
autowrap = true

[node name="heroes" type="ScrollContainer" parent="hero_vbox"]
margin_top = 37.0
margin_right = 360.0
margin_bottom = 500.0
mouse_filter = 1
size_flags_vertical = 3
theme = ExtResource( 15 )
scroll_horizontal_enabled = false
script = ExtResource( 13 )

[node name="vbox" type="VBoxContainer" parent="hero_vbox/heroes"]
margin_right = 360.0
margin_bottom = 463.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 6

[node name="monster_attack_popup" type="Popup" parent="."]
margin_top = 6.0
margin_right = 360.0
margin_bottom = 506.0
size_flags_horizontal = 3
size_flags_vertical = 3
popup_exclusive = true
script = ExtResource( 24 )

[node name="margin" type="MarginContainer" parent="monster_attack_popup"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 16
custom_constants/margin_top = 16
custom_constants/margin_left = 16
custom_constants/margin_bottom = 16

[node name="panel" type="PanelContainer" parent="monster_attack_popup/margin"]
margin_left = 16.0
margin_top = 239.0
margin_right = 352.0
margin_bottom = 261.0
size_flags_horizontal = 3
size_flags_vertical = 4
custom_styles/panel = ExtResource( 20 )

[node name="vbox" type="VBoxContainer" parent="monster_attack_popup/margin/panel"]
margin_left = 10.0
margin_top = 10.0
margin_right = 326.0
margin_bottom = 448.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 8

[node name="info" type="HBoxContainer" parent="monster_attack_popup/margin/panel/vbox"]
margin_right = 316.0
margin_bottom = 32.0
alignment = 1

[node name="xp_given" type="HBoxContainer" parent="monster_attack_popup/margin/panel/vbox/info"]
margin_left = 82.0
margin_right = 130.0
margin_bottom = 32.0
alignment = 1

[node name="img" type="TextureRect" parent="monster_attack_popup/margin/panel/vbox/info/xp_given"]
margin_right = 32.0
margin_bottom = 32.0
rect_min_size = Vector2( 32, 32 )
theme = ExtResource( 18 )
texture = ExtResource( 26 )
expand = true

[node name="xp_given" type="Label" parent="monster_attack_popup/margin/panel/vbox/info/xp_given"]
margin_left = 36.0
margin_top = 9.0
margin_right = 48.0
margin_bottom = 23.0
theme = ExtResource( 18 )
custom_colors/font_color = Color( 0.909804, 1, 0.513726, 1 )
text = "--"
align = 1

[node name="travel_time" type="HBoxContainer" parent="monster_attack_popup/margin/panel/vbox/info"]
margin_left = 134.0
margin_right = 182.0
margin_bottom = 32.0
alignment = 1

[node name="img" type="TextureRect" parent="monster_attack_popup/margin/panel/vbox/info/travel_time"]
margin_right = 32.0
margin_bottom = 32.0
rect_min_size = Vector2( 32, 32 )
theme = ExtResource( 18 )
texture = ExtResource( 22 )
expand = true

[node name="travel_time" type="Label" parent="monster_attack_popup/margin/panel/vbox/info/travel_time"]
margin_left = 36.0
margin_top = 9.0
margin_right = 48.0
margin_bottom = 23.0
theme = ExtResource( 18 )
custom_colors/font_color = Color( 0.909804, 1, 0.513726, 1 )
text = "--"
align = 1

[node name="food_cost" type="HBoxContainer" parent="monster_attack_popup/margin/panel/vbox/info"]
margin_left = 186.0
margin_right = 234.0
margin_bottom = 32.0
alignment = 1

[node name="img" type="TextureRect" parent="monster_attack_popup/margin/panel/vbox/info/food_cost"]
margin_right = 32.0
margin_bottom = 32.0
rect_min_size = Vector2( 32, 32 )
theme = ExtResource( 18 )
texture = ExtResource( 17 )
expand = true

[node name="food_cost" type="Label" parent="monster_attack_popup/margin/panel/vbox/info/food_cost"]
margin_left = 36.0
margin_top = 9.0
margin_right = 48.0
margin_bottom = 23.0
theme = ExtResource( 18 )
custom_colors/font_color = Color( 0.909804, 1, 0.513726, 1 )
text = "--"
align = 1

[node name="sep" parent="monster_attack_popup/margin/panel/vbox" instance=ExtResource( 11 )]
margin_top = 40.0
margin_right = 316.0
margin_bottom = 44.0
custom_styles/panel = SubResource( 1 )

[node name="base_info" type="HBoxContainer" parent="monster_attack_popup/margin/panel/vbox"]
margin_top = 52.0
margin_right = 316.0
margin_bottom = 150.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 16
alignment = 1

[node name="left_panel" type="VBoxContainer" parent="monster_attack_popup/margin/panel/vbox/base_info"]
margin_right = 150.0
margin_bottom = 98.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 0

[node name="hero" type="VBoxContainer" parent="monster_attack_popup/margin/panel/vbox/base_info/left_panel"]
margin_right = 150.0
margin_bottom = 98.0
custom_constants/separation = 2
alignment = 1

[node name="img" type="Button" parent="monster_attack_popup/margin/panel/vbox/base_info/left_panel/hero"]
margin_left = 43.0
margin_right = 107.0
margin_bottom = 64.0
rect_min_size = Vector2( 64, 64 )
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource( 23 )
expand_icon = true

[node name="name" type="Label" parent="monster_attack_popup/margin/panel/vbox/base_info/left_panel/hero"]
margin_top = 66.0
margin_right = 150.0
margin_bottom = 80.0
theme = ExtResource( 18 )
text = "--"
align = 1

[node name="hbox" type="HBoxContainer" parent="monster_attack_popup/margin/panel/vbox/base_info/left_panel/hero"]
margin_top = 82.0
margin_right = 150.0
margin_bottom = 98.0
alignment = 1

[node name="img" type="TextureRect" parent="monster_attack_popup/margin/panel/vbox/base_info/left_panel/hero/hbox"]
margin_left = 59.0
margin_right = 75.0
margin_bottom = 16.0
theme = ExtResource( 18 )
texture = ExtResource( 16 )

[node name="current_health" type="Label" parent="monster_attack_popup/margin/panel/vbox/base_info/left_panel/hero/hbox"]
margin_left = 79.0
margin_top = 1.0
margin_right = 91.0
margin_bottom = 15.0
theme = ExtResource( 18 )
custom_colors/font_color = Color( 0.909804, 1, 0.513726, 1 )
text = "--"
align = 1

[node name="right_panel" type="VBoxContainer" parent="monster_attack_popup/margin/panel/vbox/base_info"]
margin_left = 166.0
margin_right = 316.0
margin_bottom = 98.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 0

[node name="enemy" type="VBoxContainer" parent="monster_attack_popup/margin/panel/vbox/base_info/right_panel"]
margin_right = 150.0
margin_bottom = 98.0
custom_constants/separation = 2
alignment = 1

[node name="img" type="Button" parent="monster_attack_popup/margin/panel/vbox/base_info/right_panel/enemy"]
margin_left = 43.0
margin_right = 107.0
margin_bottom = 64.0
rect_min_size = Vector2( 64, 64 )
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource( 23 )
expand_icon = true

[node name="name" type="Label" parent="monster_attack_popup/margin/panel/vbox/base_info/right_panel/enemy"]
margin_top = 66.0
margin_right = 150.0
margin_bottom = 80.0
theme = ExtResource( 18 )
text = "--"
align = 1

[node name="hbox" type="HBoxContainer" parent="monster_attack_popup/margin/panel/vbox/base_info/right_panel/enemy"]
margin_top = 82.0
margin_right = 150.0
margin_bottom = 98.0
alignment = 1

[node name="img" type="TextureRect" parent="monster_attack_popup/margin/panel/vbox/base_info/right_panel/enemy/hbox"]
margin_left = 59.0
margin_right = 75.0
margin_bottom = 16.0
theme = ExtResource( 18 )
texture = ExtResource( 16 )

[node name="current_health" type="Label" parent="monster_attack_popup/margin/panel/vbox/base_info/right_panel/enemy/hbox"]
margin_left = 79.0
margin_top = 1.0
margin_right = 91.0
margin_bottom = 15.0
theme = ExtResource( 18 )
custom_colors/font_color = Color( 0.909804, 1, 0.513726, 1 )
text = "--"
align = 1

[node name="header" type="VBoxContainer" parent="monster_attack_popup/margin/panel/vbox"]
visible = false
margin_top = 158.0
margin_right = 316.0
margin_bottom = 188.0

[node name="sep2" parent="monster_attack_popup/margin/panel/vbox/header" instance=ExtResource( 11 )]
margin_top = 0.0
margin_right = 316.0
margin_bottom = 4.0
custom_styles/panel = SubResource( 1 )

[node name="label" type="Label" parent="monster_attack_popup/margin/panel/vbox/header"]
margin_top = 8.0
margin_right = 316.0
margin_bottom = 22.0
theme = ExtResource( 18 )
custom_colors/font_color = Color( 0.937255, 0.980392, 0.352941, 1 )
align = 1

[node name="sep3" parent="monster_attack_popup/margin/panel/vbox/header" instance=ExtResource( 11 )]
margin_top = 26.0
margin_right = 316.0
margin_bottom = 30.0
custom_styles/panel = SubResource( 1 )

[node name="stats_section" type="HBoxContainer" parent="monster_attack_popup/margin/panel/vbox"]
margin_top = 158.0
margin_right = 316.0
margin_bottom = 350.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="stat_module_player" parent="monster_attack_popup/margin/panel/vbox/stats_section" instance=ExtResource( 31 )]
margin_top = 0.0
margin_right = 152.0
margin_bottom = 192.0

[node name="separator" parent="monster_attack_popup/margin/panel/vbox/stats_section" instance=ExtResource( 30 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 156.0
margin_right = 160.0
margin_bottom = 192.0

[node name="stat_module_enemy" parent="monster_attack_popup/margin/panel/vbox/stats_section" instance=ExtResource( 31 )]
margin_left = 164.0
margin_top = 0.0
margin_right = 316.0
margin_bottom = 192.0

[node name="buttons" type="MarginContainer" parent="monster_attack_popup/margin/panel/vbox"]
margin_top = 358.0
margin_right = 316.0
margin_bottom = 438.0
custom_constants/margin_right = 8
custom_constants/margin_top = 8
custom_constants/margin_left = 8
custom_constants/margin_bottom = 8

[node name="hbox" type="HBoxContainer" parent="monster_attack_popup/margin/panel/vbox/buttons"]
margin_left = 8.0
margin_top = 8.0
margin_right = 308.0
margin_bottom = 72.0
alignment = 1

[node name="attack" type="Button" parent="monster_attack_popup/margin/panel/vbox/buttons/hbox"]
margin_left = 16.0
margin_right = 80.0
margin_bottom = 64.0
rect_min_size = Vector2( 64, 64 )
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource( 21 )
icon = ExtResource( 29 )
expand_icon = true

[node name="stats" type="Button" parent="monster_attack_popup/margin/panel/vbox/buttons/hbox"]
margin_left = 84.0
margin_right = 148.0
margin_bottom = 64.0
rect_min_size = Vector2( 64, 64 )
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource( 21 )
icon = ExtResource( 27 )
expand_icon = true

[node name="drops" type="Button" parent="monster_attack_popup/margin/panel/vbox/buttons/hbox"]
margin_left = 152.0
margin_right = 216.0
margin_bottom = 64.0
rect_min_size = Vector2( 64, 64 )
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource( 21 )
icon = ExtResource( 28 )
expand_icon = true

[node name="close" type="Button" parent="monster_attack_popup/margin/panel/vbox/buttons/hbox"]
margin_left = 220.0
margin_right = 284.0
margin_bottom = 64.0
rect_min_size = Vector2( 64, 64 )
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource( 21 )
icon = ExtResource( 25 )
expand_icon = true

[connection signal="pressed" from="monster_vbox/hbox/reselect_hero" to="." method="switch_views"]
[connection signal="pressed" from="monster_attack_popup/margin/panel/vbox/buttons/hbox/close" to="monster_attack_popup" method="close_monster_attack_popup"]
